--- a/pkg/synthesis/tests_expected_output/k8s_resources/Example1dExternalWithSegmentsFiltered_NoHint_Filtered/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/Example1dExternalWithSegmentsFiltered_NoHint_Filtered/policies.yaml
@@ -13,13 +13,7 @@ spec:
             - port: 445
               protocol: TCP
           to:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - seg_a_and_b
-              podSelector:
+            - podSelector:
                 matchExpressions:
                     - key: VMs_within_IPs__0.0.1.128-25
                       operator: Exists
@@ -42,13 +36,7 @@ metadata:
 spec:
     ingress:
         - from:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - seg_a_and_b
-              podSelector:
+            - podSelector:
                 matchExpressions:
                     - key: VMs_within_IPs__0.0.1.0-25
                       operator: Exists
