--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExternalWithTautology/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExternalWithTautology/policies.yaml
@@ -97,13 +97,7 @@ metadata:
 spec:
     ingress:
         - from:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - default
-              podSelector: {}
+            - podSelector: {}
     podSelector: {}
     policyTypes:
         - Ingress
